--- a/TrinityTwoProj/reports/Thu Dec 10 13-40-51 IST 2020/Index.html
+++ b/TrinityTwoProj/reports/Thu Dec 10 13-40-51 IST 2020/Index.html
@@ -56,7 +56,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">Dec 3, 2020 04:10:21 PM</span>
+                    <span class="badge badge-primary">Dec 10, 2020 01:40:51 PM</span>
                 </a>
             </li>
         </ul>
@@ -124,8 +124,8 @@
 					<div class="open-test">
 						<div class="test-detail">
 							<p class="name">LOGINTEST</p>
-							<p class="duration text-sm">0h 0m 58s+698ms</p>
-							<span class="datetime">16:10:21 PM</span>
+							<p class="duration text-sm">0h 1m 41s+858ms</p>
+							<span class="datetime">13:40:51 PM</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -133,9 +133,9 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-fail">LOGINTEST</h5>
-									<span class='badge badge-success'>12.03.2020 16:10:21</span>
-									<span class='badge badge-danger'>12.03.2020 16:11:20</span>
-									<span class='badge badge-default'>0h 0m 58s+698ms</span>
+									<span class='badge badge-success'>12.10.2020 13:40:51</span>
+									<span class='badge badge-danger'>12.10.2020 13:42:33</span>
+									<span class='badge badge-default'>0h 1m 41s+858ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
 									
@@ -152,100 +152,79 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:10:21 PM</td>
+				<td>1:40:51 PM</td>
 				<td>
 						{Username=abc@gmail.com, Password=123454.0, Runmode=Y, PasswordValid=Y, UsernameValid=Y, Browser=Chrome}
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:10:21 PM</td>
+				<td>1:40:51 PM</td>
 				<td>
 						Opening the browser chrome
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:10:41 PM</td>
+				<td>1:42:01 PM</td>
 				<td>
 						Navigaing to https://zoho.com
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:10:41 PM</td>
+				<td>1:42:01 PM</td>
 				<td>
 						URLhttps://zoho.com
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:10:50 PM</td>
+				<td>1:42:18 PM</td>
 				<td>
 						Expedted Title Zoho - Cloud Software Suite and SaaS Applications for Businesses
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:10:50 PM</td>
+				<td>1:42:18 PM</td>
 				<td>
 						Actual Title Zoho - Cloud Software Suite and SaaS Applications for Businesses
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:10:51 PM</td>
+				<td>1:42:18 PM</td>
 				<td>
 						validateText
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:10:55 PM</td>
+				<td>1:42:31 PM</td>
 				<td>
 						Actual Text {Your Life's Work, Powered By Our Life's Work}. Expected Text {ABC}
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:10:56 PM</td>
+				<td>1:42:33 PM</td>
 				<td>
 						Screenshot-> com.aventstack.extentreports.ExtentTest@2aa27288
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>4:10:56 PM</td>
+				<td>1:42:33 PM</td>
 				<td>
 						Text not Matching. Got text as Your Life's Work, Powered By Our Life's Work
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:10:56 PM</td>
+				<td>1:42:33 PM</td>
 				<td>
 						Going to username page
-				</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:11:17 PM</td>
-				<td>
-						Element found success fully By.id: password
-				</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:11:17 PM</td>
-				<td>
-						Submitting Password
-				</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-info text-info"></i></td>
-				<td>4:11:20 PM</td>
-				<td>
-						Password submitted
 				</td>
 			</tr>
 	</tbody>
@@ -253,7 +232,7 @@
 </div>
 <div class="detail-foot">
 	<ul class="attachments">
-			<img class='r-img' onerror='this.style.display="none"' data-featherlight='E:\Selenium Project\workspace\ZohoPomProj//reports//Thu Dec 03 16-10-21 IST 2020\screenshots\Thu_Dec_03_16_10_55_IST_2020.png' src='E:\Selenium Project\workspace\ZohoPomProj//reports//Thu Dec 03 16-10-21 IST 2020\screenshots\Thu_Dec_03_16_10_55_IST_2020.png'>
+			<img class='r-img' onerror='this.style.display="none"' data-featherlight='E:\Selenium Project\workspace\TrinityTwoAutomation\TrinityTwoProj//reports//Thu Dec 10 13-40-51 IST 2020\screenshots\Thu_Dec_10_13_42_31_IST_2020.png' src='E:\Selenium Project\workspace\TrinityTwoAutomation\TrinityTwoProj//reports//Thu Dec 10 13-40-51 IST 2020\screenshots\Thu_Dec_10_13_42_31_IST_2020.png'>
 	</ul>
 </div>
 					</div>
@@ -314,8 +293,8 @@
 				<div class="card-footer">
 					<div><small data-tooltip='0%'><b>0</b> events passed</small></div>
 					<div>
-						<small data-tooltip='7.143%'><b>1</b> events failed, 
-						<b data-tooltip='92.857%'>13</b> others
+						<small data-tooltip='9.091%'><b>1</b> events failed, 
+						<b data-tooltip='90.909%'>10</b> others
 						</small>
 					</div>
 				</div>
@@ -348,7 +327,7 @@
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Start</h6>
-							<h4 class="font-weight-light mt-4">Dec 3, 2020 04:10:21 PM</h4>
+							<h4 class="font-weight-light mt-4">Dec 10, 2020 01:40:51 PM</h4>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -364,7 +343,7 @@
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Duration</h6>
-							<h4 class="font-weight-light mt-4">0h 0m 58s+909ms</h4>
+							<h4 class="font-weight-light mt-4">0h 2m 4s+335ms</h4>
 							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -422,21 +401,21 @@
 		infoGrandChild: 0,
 		debugGrandChild: 0,
 		exceptionsGrandChild: 0,
-		eventsCount: 14,
+		eventsCount: 11,
 		passEvents: 0,
 		failEvents: 1,
 		fatalEvents: 0,
 		errorEvents: 0,
 		warningEvents: 0,
 		skipEvents: 0,
-		infoEvents: 13,
+		infoEvents: 10,
 		debugEvents: 0,
 		exceptionsEvents: 0
 	};
 </script>
 <script>
 	var timeline = {
-	        "LOGINTEST":58.698
+	        "LOGINTEST":101.858
 	};
 </script>
                 </div>
