--- a/TrinityTwoProj/test-output/old/Default suite/classes.html
+++ b/TrinityTwoProj/test-output/old/Default suite/classes.html
@@ -4,14 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.TrinityTwo.suite.testcases.login.LoginTest</td>
+<td>com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginTest</td>
+<td>trinityTwosignupValidateEmailNegative</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>trinityTwoLoginPageTitle</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>trinityTwosignupValidatePhoneNumberNegative</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>trinityTwoSignupPageHeader</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
