--- a/TrinityTwoProj/test-output/old/Default suite/methods.html
+++ b/TrinityTwoProj/test-output/old/Default suite/methods.html
@@ -1,28 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c91b2">  <td>21/01/11 19:48:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">&gt;&gt;init</td> 
+<tr bgcolor="6c91b2">  <td>21/02/19 09:11:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSelfVerificationValidation@7dcf94f8]">&gt;&gt;init</td> 
 <td>&nbsp;</td>  <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="d4b26b">  <td>21/01/11 19:48:04</td>   <td>266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TrinityTwoSignupTC.trinityTwoLoginPageTitle(java.util.Hashtable)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">trinityTwoLoginPageTitle</td> 
+<tr bgcolor="d4b26b">  <td>21/02/19 09:11:01</td>   <td>259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TrinityTwoSelfVerificationValidation.trinityTwo_SelfVerification_Validation(java.util.Hashtable)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSelfVerificationValidation@7dcf94f8]">trinityTwo_SelfVerification_Validation</td> 
   <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="6c91b2">  <td>21/01/11 19:48:22</td>   <td>18291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="6c91b2">  <td>21/01/11 19:48:25</td>   <td>21235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">&gt;&gt;init</td> 
-<td>&nbsp;</td>  <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="d4b26b">  <td>21/01/11 19:48:25</td>   <td>21235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TrinityTwoSignupTC.trinityTwoSignupPageHeader(java.util.Hashtable)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">trinityTwoSignupPageHeader</td> 
-  <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="6c91b2">  <td>21/01/11 19:48:49</td>   <td>44854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="6c91b2">  <td>21/01/11 19:48:49</td>   <td>44979</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">&gt;&gt;init</td> 
-<td>&nbsp;</td>  <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="d4b26b">  <td>21/01/11 19:48:49</td>   <td>44980</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TrinityTwoSignupTC.trinityTwosignupValidateEmailNegative(java.util.Hashtable)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">trinityTwosignupValidateEmailNegative</td> 
-  <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="6c91b2">  <td>21/01/11 19:49:51</td>   <td>107225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="6c91b2">  <td>21/01/11 19:49:51</td>   <td>107540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">&gt;&gt;init</td> 
-<td>&nbsp;</td>  <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="d4b26b">  <td>21/01/11 19:49:51</td>   <td>107541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TrinityTwoSignupTC.trinityTwosignupValidatePhoneNumberNegative(java.util.Hashtable)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">trinityTwosignupValidatePhoneNumberNegative</td> 
-  <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="6c91b2">  <td>21/01/11 19:50:57</td>   <td>172712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC@7dcf94f8]">&lt;&lt;quit</td> 
+<tr bgcolor="6c91b2">  <td>21/02/19 09:12:42</td>   <td>100982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSelfVerificationValidation@7dcf94f8]">&lt;&lt;quit</td> 
 <td>&nbsp;</td>  <td>main@1169474473</td>   <td></td> </tr>
 </table>
