--- a/TrinityTwoProj/test-output/old/Default suite/classes.html
+++ b/TrinityTwoProj/test-output/old/Default suite/classes.html
@@ -4,26 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupTC</td>
+<td>com.TrinityTwo.suite.loginAndSignup.TrinityTwoSelfVerificationValidation</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>trinityTwosignupValidateEmailNegative</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>trinityTwoLoginPageTitle</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>trinityTwosignupValidatePhoneNumberNegative</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>trinityTwoSignupPageHeader</td>
+<td>trinityTwo_SelfVerification_Validation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
