--- a/TrinityTwoProj/test-output/old/Login Suite/methods.html
+++ b/TrinityTwoProj/test-output/old/Login Suite/methods.html
@@ -1,22 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Login Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b36d79">  <td>20/05/24 16:07:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.zoho.suite.testcases.login.LoginTest@6c6cb480]">&gt;&gt;init</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1641819270</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>20/05/24 16:07:03</td>   <td>149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.zoho.suite.testcases.login.LoginTest@6c6cb480]">loginTest</td> 
-  <td>TestNG-tests-1@1641819270</td>   <td></td> </tr>
-<tr bgcolor="b36d79">  <td>20/05/24 16:07:47</td>   <td>44147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.zoho.suite.testcases.login.LoginTest@6c6cb480]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1641819270</td>   <td></td> </tr>
-<tr bgcolor="b36d79">  <td>20/05/24 16:07:48</td>   <td>45797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.zoho.suite.testcases.login.LoginTest@6c6cb480]">&gt;&gt;init</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1641819270</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>20/05/24 16:07:48</td>   <td>45797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.zoho.suite.testcases.login.LoginTest@6c6cb480]">loginTest</td> 
-  <td>TestNG-tests-1@1641819270</td>   <td></td> </tr>
-<tr bgcolor="b36d79">  <td>20/05/24 16:07:49</td>   <td>45806</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.zoho.suite.testcases.login.LoginTest@6c6cb480]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1641819270</td>   <td></td> </tr>
-<tr bgcolor="b36d79">  <td>20/05/24 16:07:49</td>   <td>45825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.zoho.suite.testcases.login.LoginTest@6c6cb480]">&gt;&gt;init</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1641819270</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>20/05/24 16:07:49</td>   <td>45825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.zoho.suite.testcases.login.LoginTest@6c6cb480]">loginTest</td> 
-  <td>TestNG-tests-1@1641819270</td>   <td></td> </tr>
-<tr bgcolor="b36d79">  <td>20/05/24 16:07:49</td>   <td>45830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.zoho.suite.testcases.login.LoginTest@6c6cb480]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1641819270</td>   <td></td> </tr>
+<tr bgcolor="6c91b2">  <td>21/01/18 17:54:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoLoginPageTitle@7dcf94f8]">&gt;&gt;init</td> 
+<td>&nbsp;</td>  <td>main@495702238</td>   <td></td> </tr>
+<tr bgcolor="d4b26b">  <td>21/01/18 17:54:13</td>   <td>261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TrinityTwoLoginPageTitle.trinityTwo_Login_Page_Title(java.util.Hashtable)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoLoginPageTitle@7dcf94f8]">trinityTwo_Login_Page_Title</td> 
+  <td>main@495702238</td>   <td></td> </tr>
+<tr bgcolor="6c91b2">  <td>21/01/18 17:54:33</td>   <td>19712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoLoginPageTitle@7dcf94f8]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@495702238</td>   <td></td> </tr>
+<tr bgcolor="6c91b2">  <td>21/01/18 17:54:36</td>   <td>23271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupPageHeader@544fa968]">&gt;&gt;init</td> 
+<td>&nbsp;</td>  <td>main@495702238</td>   <td></td> </tr>
+<tr bgcolor="7bbcae">  <td>21/01/18 17:54:36</td>   <td>23272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TrinityTwoSignupPageHeader.trinityTwo_Signup_Page_Header(java.util.Hashtable)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupPageHeader@544fa968]">trinityTwo_Signup_Page_Header</td> 
+  <td>main@495702238</td>   <td></td> </tr>
+<tr bgcolor="6c91b2">  <td>21/01/18 17:55:00</td>   <td>47538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupPageHeader@544fa968]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@495702238</td>   <td></td> </tr>
+<tr bgcolor="6c91b2">  <td>21/01/18 17:55:02</td>   <td>49270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupValidateEmailNegative@bccb269]">&gt;&gt;init</td> 
+<td>&nbsp;</td>  <td>main@495702238</td>   <td></td> </tr>
+<tr bgcolor="f1baf5">  <td>21/01/18 17:55:02</td>   <td>49270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TrinityTwoSignupValidateEmailNegative.trinityTwo_Signup_ValidateEmail_Negative(java.util.Hashtable)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupValidateEmailNegative@bccb269]">trinityTwo_Signup_ValidateEmail_Negative</td> 
+  <td>main@495702238</td>   <td></td> </tr>
+<tr bgcolor="6c91b2">  <td>21/01/18 17:56:12</td>   <td>119283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupValidateEmailNegative@bccb269]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@495702238</td>   <td></td> </tr>
+<tr bgcolor="6c91b2">  <td>21/01/18 17:56:13</td>   <td>120349</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init(org.testng.ITestResult)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupValidatePhoneNumberNegative@26b3fd41]">&gt;&gt;init</td> 
+<td>&nbsp;</td>  <td>main@495702238</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>21/01/18 17:56:13</td>   <td>120351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TrinityTwoSignupValidatePhoneNumberNegative.trinityTwo_Signup_ValidatePhoneNumber_Negative(java.util.Hashtable)[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupValidatePhoneNumberNegative@26b3fd41]">trinityTwo_Signup_ValidatePhoneNumber_Negative</td> 
+  <td>main@495702238</td>   <td></td> </tr>
+<tr bgcolor="6c91b2">  <td>21/01/18 17:57:27</td>   <td>193966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:com.TrinityTwo.suite.loginAndSignup.TrinityTwoSignupValidatePhoneNumberNegative@26b3fd41]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@495702238</td>   <td></td> </tr>
 </table>
